--- a/user_therapist/treatment_detail_ongoing.html
+++ b/user_therapist/treatment_detail_ongoing.html
@@ -295,7 +295,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="col-lg-8 col-xl-6">
 
 									<!--begin::Portlet-->
-									<div class="kt-portlet kt-portlet--mobile" id="print-section">
+									<div class="kt-portlet kt-portlet--mobile">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
 												<h3 class="kt-portlet__head-title">
@@ -306,6 +306,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<div class="kt-portlet__body">
 											<div style="margin-bottom:20px;">
                                                 <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
                                             </div>
                                             <table class="col-5" style="margin-bottom:50px">
                                                 <tr>
