--- a/user_admin/listTreatment_detail_ongoing.html
+++ b/user_admin/listTreatment_detail_ongoing.html
@@ -337,16 +337,16 @@ License: You must have a valid license purchased only from themeforest(the above
 	                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
 	                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
 												</div>
-												<div class="col-6">
+												<!-- <div class="col-6">
 													<div class="row">
 														<div class="col-12" style="text-align: right; margin-bottom:5px;">
-															<button class="col-5 btn btn-warning" onclick="printFunction()">Print</button>
+															<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
 														</div>
 														<div class="col-12" style="text-align: right;">
-															<button class="col-5 btn btn-danger" id="kt_sweetalert_void">Void</button>
+															<button class="col-5 btn btn-danger no-print" id="kt_sweetalert_void">Void</button>
 														</div>
 													</div>
-												</div>
+												</div> -->
                                             </div>
                                             <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
                                                 <tr>
@@ -363,6 +363,20 @@ License: You must have a valid license purchased only from themeforest(the above
         									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="row" style="margin-top:50px;">
 												<div class="col-6" style="padding-right:0px;">
+													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px;">
+		                                                <tr>
+		                                                    <th width="35%">Waktu Mulai</th>
+		                                                    <th width="10%">:</th>
+		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+		                                                </tr>
+		                                                <tr>
+		                                                    <th>Waktu Selesai</th>
+		                                                    <th>:</th>
+		                                                    <th style="font-weight:500;" name="waktu-selesai">-</th>
+		                                                </tr>
+		                                            </table>
+												</div>
+												<!-- <div class="col-6" style="padding-right:0px;">
 													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
 		                                                <tr>
 		                                                    <th width="35%">Waktu Mulai</th>
@@ -377,8 +391,8 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                            </table>
 												</div>
 												<div class="col-6" style="padding-left:0px;text-align:right;">
-													<button class="col-5 btn btn-success" style="margin-top:5px;" data-toggle="modal" data-target="#kt_modal_treatment_bayar">Bayar</button>
-												</div>
+													<button class="col-5 btn btn-success no-print" style="margin-top:5px;" data-toggle="modal" data-target="#kt_modal_treatment_bayar">Bayar</button>
+												</div> -->
                                             </div>
 										</div>
 									</div>
