--- a/user_admin/listTreatment_detail_scheduled.html
+++ b/user_admin/listTreatment_detail_scheduled.html
@@ -349,13 +349,29 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 </tr> -->
                                             </table>
         									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
-                                            <div class="col-12">
-												<div class="row justify-end" style="padding: 0px; margin-top:50px;">
-													<div class="col-6 justify-end" style="padding: 0px">
-		                                                <button type="button" class="btn btn-danger col-5" id="kt_sweetalert_batal">Batal</buttton>&nbsp;
-														<button type="button" class="btn btn-brand col-5" onclick="window.location.href='user_admin/listTreatment_detail_waiting.html'" style="margin-left: 5px">Mulai</buttton>
-													</div>
+											<div class="row" style="margin-top:50px;">
+												<div class="col-6" style="padding-right:0px;">
+													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute">
+		                                                <tr>
+		                                                    <th width="35%">Waktu Mulai</th>
+		                                                    <th width="10%">:</th>
+		                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+		                                                </tr>
+		                                                <tr>
+		                                                    <th>Waktu Selesai</th>
+		                                                    <th>:</th>
+		                                                    <th style="font-weight:500;" name="waktu-selesai">-</th>
+		                                                </tr>
+		                                            </table>
 												</div>
+	                                            <div class="col-6">
+													<div class="row justify-end" style="padding: 0px; margin-top:50px;">
+														<div class="col-12 justify-end" style="padding: 0px">
+			                                                <button type="button" class="btn btn-danger col-5" id="kt_sweetalert_batal">Batal</buttton>&nbsp;
+															<button type="button" class="btn btn-brand col-5" onclick="window.location.href='user_admin/listTreatment_detail_waiting.html'" style="margin-left: 5px">Mulai</buttton>
+														</div>
+													</div>
+	                                            </div>
                                             </div>
 										</div>
 									</div>
