--- a/user_admin/index.html
+++ b/user_admin/index.html
@@ -28,6 +28,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Fonts -->
 
 		<!--begin::Page Vendors Styles(used by this page) -->
+		<!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css"> -->
 
 		<!--end::Page Vendors Styles -->
 
@@ -363,8 +364,8 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 											<div class="kt-portlet__foot">
 												<div class="horizontal-centered kt-margin-0" style="padding: 0px 0px;">
-													<button type="submit" class="btn btn-warning kt_sweetalert_berhasil" style="margin-right: 0.25rem">Jadwalkan</buttton>&nbsp;
-													<button type="submit" class="btn btn-brand kt_sweetalert_berhasil" style="margin-left: 0.25rem">Activate Session</buttton>
+													<button type="submit" class="btn btn-brand" data-toggle="modal" data-target="#kt_modal_jadwal" style="margin-right: 0.25rem">Jadwalkan</buttton>&nbsp;
+													<button type="submit" class="btn btn-success kt_sweetalert_berhasil" style="margin-left: 0.25rem">Activate Session</buttton>
 												</div>
 											</div>
 										</form>
@@ -433,6 +434,54 @@ License: You must have a valid license purchased only from themeforest(the above
 															<input type="text" class="form-control form-label-danger input-group-child-normal kt-margin-r-5 kt-hidden" value="Ditolak" readonly>
 															<button type="button" class="btn btn-brand" id="showtoast" style="width:auto;">Send</button>
 														</div>
+													</div>
+												</div>
+											</div>
+											<div class="modal-footer" style="justify-content:center;">
+												<button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
+												<button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_modal">Submit</button>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+
+							<div class="modal fade" id="kt_modal_jadwal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+								<div class="modal-dialog" role="document">
+									<div class="modal-content">
+										<div class="modal-header">
+											<h5 class="modal-title" id="exampleModalLabel">Penjadwalan Treatment</h5>
+											<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											</button>
+										</div>
+										<form id="kt_form_jadwal">
+											<div class="modal-body">
+												<div class="form-group row">
+													<label class="col-sm-4 col-form-label">Tanggal :</label>
+													<div class="col-sm-8">
+														<div class="input-group date">
+															<input type="text" class="form-control kt_search_tanggal" placeholder="Tanggal" name="customer_lahir" readonly>
+															<div class="input-group-append">
+																<span class="input-group-text">
+																	<i class="la la-calendar-check-o"></i>
+																</span>
+															</div>
+														</div>
+														<span class="form-text text-muted kt-hidden"></span>
+													</div>
+												</div>
+												<div class="form-group row">
+													<label class="col-sm-4 col-form-label">Waktu :</label>
+													<div class="col-sm-8">
+														<div class="input-group timepicker">
+															<input class="form-control" id="kt_timepicker_2" readonly placeholder="Select time" type="text" />
+															<div class="input-group-append">
+																<span class="input-group-text">
+																	<i class="la la-clock-o"></i>
+																</span>
+															</div>
+														</div>
+														<span class="form-text text-muted kt-hidden"></span>
 													</div>
 												</div>
 											</div>
@@ -515,6 +564,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--end::Global Theme Bundle -->
 
 		<!--begin::Page Vendors(used by this page) -->
+		<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script> -->
 
 		<!--end::Page Vendors -->
 
