--- a/user_therapist/treatment_detail_done.html
+++ b/user_therapist/treatment_detail_done.html
@@ -308,16 +308,6 @@ License: You must have a valid license purchased only from themeforest(the above
 	                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
 	                                                <span class="kt-font-bold" name="customer_nama">Darnilla</span>&nbsp;<br>
 												</div>
-												<div class="col-6">
-													<div class="row">
-														<div class="col-12" style="text-align: right; margin-bottom:5px;">
-															<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
-														</div>
-														<div class="col-12" style="text-align: right;">
-															<button class="col-5 btn btn-danger no-print" id="kt_sweetalert_void">Void</button>
-														</div>
-													</div>
-												</div>
                                             </div>
 											<table class="col-5" style="margin-bottom:50px">
                                                 <tr>
@@ -328,11 +318,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                             </table>
         									<table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_detail"></table>
 											<div class="col-12 horizontal-centered" style="padding: 0px 0px" style="margin-bottom:0px;">
-												<button type="button" class="btn btn-link" style="padding-right:0px;"><i class="flaticon-add"></i>Tambah Treatment</button>
+												<button type="button" class="btn btn-link" style="padding-right:0px;" data-toggle="modal" data-target="#kt_modal_tambah_treatment"><i class="flaticon-add"></i>Tambah Treatment</button>
 											</div>
 											<div class="row" style="margin-top:50px;">
 												<div class="col-6" style="padding-right:0px;">
-													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+													<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px;">
 		                                                <tr>
 		                                                    <th width="35%">Waktu Mulai</th>
 		                                                    <th width="10%">:</th>
@@ -341,12 +331,9 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                <tr>
 		                                                    <th>Waktu Selesai</th>
 		                                                    <th>:</th>
-		                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
+		                                                    <th style="font-weight:500;" name="waktu-selesai">-</th>
 		                                                </tr>
 		                                            </table>
-												</div>
-												<div class="col-6" style="padding-left:0px;text-align:right;">
-													<button class="col-5 btn btn-success no-print" style="margin-top:5px;" data-toggle="modal" data-target="#kt_modal_treatment_bayar">Bayar</button>
 												</div>
                                             </div>
 										</div>
@@ -358,61 +345,63 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 
                             <!--begin::Modal-->
-							<div class="modal fade" id="kt_modal_treatment_bayar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog" role="document">
+							<div class="modal fade" id="kt_modal_tambah_treatment" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-lg" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Pembayaran</h5>
+                                            <h5 class="modal-title" id="exampleModalLabel">Tambah Treatment</h5>
                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             </button>
                                         </div>
-										<form id="kt_form_pembayaran">
+										<form id="kt_form_treatment_selesai">
 	                                        <div class="modal-body">
-												<div class="justify-center kt-margin-b-10">
-													<h4 class="color-main-dark" name="pembayaran_nominal">Rp. 300.000,00</h4>
-												</div>
-                                                <div class="form-group row">
-                                                    <label class="col-form-label col-4">Jenis</label>
+												<div class="form-group row">
+                                                    <label for="example-text-input" class="col-4 col-form-label">No. Pesanan</label>
                                                     <div class="col-8">
-														<div class="kt-radio-inline">
-															<label class="kt-radio">
-																<input type="radio"  name="pembayaran_jenis"> Cash
-																<span></span>
-															</label>
-														</div>
-														<div class="kt-radio-inline">
-															<label class="col-6 kt-radio">
-																<input type="radio" name="pembayaran_jenis"> EDC Mandiri
-																<span></span>
-															</label>
-															<label class="col-5 kt-radio">
-																<input type="radio" name="pembayaran_jenis"> EDC BNI
-																<span></span>
-															</label>
-														</div>
-														<div class="kt-radio-inline">
-															<label class="col-6 kt-radio">
-																<input type="radio" name="pembayaran_jenis"> Transfer Mandiri
-																<span></span>
-															</label>
-															<label class="col-5 kt-radio">
-																<input type="radio" name="pembayaran_jenis"> Transfer BNI
-																<span></span>
-															</label>
-														</div>
-														<span class="form-text text-muted" style="margin:0px;"></span>
+                                                        <input type="text" class="form-control color-main-dark" name="treatment_nomor" value="#123456" readonly>
                                                     </div>
                                                 </div>
+												<div id="treatment_list">
+													<div class="form-group row">
+	                                                    <label for="example-text-input" class="col-4 col-form-label">Treatment</label>
+	                                                    <div class="col-8">
+	                                                        <input type="text" class="form-control" name="treatment_nama" placeholder="Treatment">
+	                                                    </div>
+	                                                </div>
+													<div class="form-group row">
+	                                                    <label for="example-text-input" class="col-4 col-form-label">Pemakaian</label>
+	                                                    <div class="row col-8 kt-margin-0" id=treatment_barang_list>
+	                                                        <div class="col-5" style="padding-left:0px">
+	                                                            <input type="text" class="form-control" name="treatment_barang" placeholder="Pemakaian">
+	                                                        </div>
+	                                                        <div class="row col-7 kt-margin-0" style="padding:0px">
+	                                                            <label for="example-text-input" class="col-2 col-form-label">Qty</label>
+																<div class="col-8">
+		                                                            <input type="text" class="form-control" name="treatment_barang_jumlah" placeholder="Jumlah">
+																</div>
+																<button type="button" class="btn btn-success btn-icon col-2" id="treatment_barang_add"><i class="fa fa-plus"></i></button>
+	                                                        </div>
+	                                                    </div>
+	                                                </div>
+												</div>
+												<div class="form-group justify-end">
+													<button type="button" class="btn btn-link" style="padding-right:0px;" id="treatment_add" onclick="addTreatment()"><i class="flaticon-add"></i>Tambah Treatment</button>
+												</div>
                                                 <div class="form-group row">
-                                                    <label for="example-text-input" class="col-4 col-form-label">Diskon</label>
+                                                    <label for="example-text-input" class="col-4 col-form-label">Foto</label>
                                                     <div class="col-8">
-                                                        <input type="text" class="form-control" name="pembayaran_diskon" placeholder="Diskon">
+														<div class="custom-file">
+															<input type="file" class="custom-file-input" name="treatment_foto" id="treatment_foto" accept="image/*">
+															<label class="custom-file-label" for="treatment_foto">Choose file</label>
+														</div>
+														<span class="form-text"  style="margin: 1rem 0 1rem 0">Image preview :</span>
+														<div id="uploaded_image" align="center" class="image-cropper"></div>
                                                     </div>
                                                 </div>
 	                                        </div>
 	                                        <div class="modal-footer" style="justify-content:center;">
 	                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_modal_2">Submit</button>
+	                                            <button type="submit" class="btn btn-success" id="kt_sweetalert_berhasil_modal">Submit</button>
 	                                        </div>
 										</form>
                                     </div>
@@ -502,6 +491,49 @@ License: You must have a valid license purchased only from themeforest(the above
 			var printFunction = function () {
 				window.print();
 			}
+
+			// Add button
+			$('#treatment_add').click(function() {
+				document.querySelector('#treatment_list').insertAdjacentHTML (
+					'beforeend',
+					`<div class="form-group row">
+						<label for="example-text-input" class="col-4 col-form-label">Treatment</label>
+						<div class="col-8">
+							<input type="text" class="form-control" name="treatment_nama" placeholder="Treatment">
+						</div>
+					</div>
+					<div class="form-group row">
+						<label for="example-text-input" class="col-4 col-form-label">Pemakaian</label>
+						<div class="row col-8 kt-margin-0" id=treatment_barang_list>
+							<div class="col-5" style="padding-left:0px">
+								<input type="text" class="form-control" name="treatment_barang" placeholder="Pemakaian">
+							</div>
+							<div class="row col-7 kt-margin-0" style="padding:0px">
+								<label for="example-text-input" class="col-2 col-form-label">Qty</label>
+								<div class="col-8">
+									<input type="text" class="form-control" name="treatment_barang_jumlah" placeholder="Jumlah">
+								</div>
+								<button type="button" class="btn btn-success btn-icon col-2" id="treatment_barang_add"><i class="fa fa-plus"></i></button>
+							</div>
+						</div>
+					</div>`
+				)
+			});
+
+			$('#treatment_barang_add').click(function() {
+				document.querySelector('#treatment_barang_list').insertAdjacentHTML (
+					'afterbegin',
+					`<div class="col-5" style="padding-left:0px; margin-bottom: 10px">
+						<input type="text" class="form-control" name="treatment_barang" placeholder="Pemakaian">
+					</div>
+					<div class="row col-7 kt-margin-0" style="padding:0px; margin-bottom: 10px">
+						<label for="example-text-input" class="col-2 col-form-label">Qty</label>
+						<div class="col-10" style="padding-right: 0px">
+							<input type="text" class="form-control" name="treatment_barang_jumlah" placeholder="Jumlah">
+						</div>
+					</div>`
+				)
+			});
 
 			// Sweetalert
 			$('#kt_sweetalert_berhasil_modal_2').click(function(e) {
