new inventory reivision on therapist, inventory & superadmin. breadcrumb and title still not finished

--- a/user_therapist/inventory.html
+++ b/user_therapist/inventory.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Active Treatment | Therapist Fabulash</title>
+		<title>Inventory | Therapist Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -112,7 +112,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<h4 class="sidebar-logo">THERAPIST PAGE</h4>
 							</div>
 							<ul class="kt-menu__nav ">
-								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect x="0" y="0" width="24" height="24"/>
 								        <path d="M2.56066017,10.6819805 L4.68198052,8.56066017 C5.26776695,7.97487373 6.21751442,7.97487373 6.80330086,8.56066017 L8.9246212,10.6819805 C9.51040764,11.267767 9.51040764,12.2175144 8.9246212,12.8033009 L6.80330086,14.9246212 C6.21751442,15.5104076 5.26776695,15.5104076 4.68198052,14.9246212 L2.56066017,12.8033009 C1.97487373,12.2175144 1.97487373,11.267767 2.56066017,10.6819805 Z M14.5606602,10.6819805 L16.6819805,8.56066017 C17.267767,7.97487373 18.2175144,7.97487373 18.8033009,8.56066017 L20.9246212,10.6819805 C21.5104076,11.267767 21.5104076,12.2175144 20.9246212,12.8033009 L18.8033009,14.9246212 C18.2175144,15.5104076 17.267767,15.5104076 16.6819805,14.9246212 L14.5606602,12.8033009 C13.9748737,12.2175144 13.9748737,11.267767 14.5606602,10.6819805 Z" fill="#000000" opacity="0.3"/>
@@ -140,7 +140,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <rect fill="#000000" x="11" y="16" width="2" height="2" rx="1"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">Complaint</span></a></li>
-								<li class="kt-menu__item" aria-haspopup="true"><a href="user_therapist/inventory.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/inventory.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<rect id="bound" x="0" y="0" width="24" height="24" />
 										<path d="M4,9.67471899 L10.880262,13.6470401 C10.9543486,13.689814 11.0320333,13.7207107 11.1111111,13.740321 L11.1111111,21.4444444 L4.49070127,17.526473 C4.18655139,17.3464765 4,17.0193034 4,16.6658832 L4,9.67471899 Z M20,9.56911707 L20,16.6658832 C20,17.0193034 19.8134486,17.3464765 19.5092987,17.526473 L12.8888889,21.4444444 L12.8888889,13.6728275 C12.9050191,13.6647696 12.9210067,13.6561758 12.9368301,13.6470401 L20,9.56911707 Z" id="Combined-Shape" fill="#000000" />
@@ -271,10 +271,10 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Active Treatment </h3>
+										Inventory </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_therapist/index.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_therapist/inventory.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
 									</div>
 								</div>
 							</div>
@@ -283,9 +283,10 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- end:: Content Head -->
 
 						<!-- begin:: Content -->
+
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-                            <div class="row row-centered">
+                            <div class="row justify-content-center">
 
 								<div class="col-12">
 
@@ -297,12 +298,15 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Active Treatments
+													Inventory
 												</h3>
+											</div>
+                                            <div class="kt-portlet__head-toolbar">
+												<a href="user_therapist/inventory_request_new.html" class="btn btn-sm btn-success"><i class="flaticon2-graphic-design" style="color: white;"></i> New Request</a>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <form class="kt-margin-b-10">
+											<form class="kt-form kt-form--fit kt-margin-b-10">
     											<div class="row justify-space-between">
 													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
 														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
@@ -317,7 +321,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
     											</div>
     										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_active"></table>
+                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_inventory"></table>
 										</div>
 									</div>
 
