--- a/user_therapist/inventory_detail_disetujui.html
+++ b/user_therapist/inventory_detail_disetujui.html
@@ -18,7 +18,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<head>
 		<base href="../">
 		<meta charset="utf-8" />
-		<title>Active Treatment | Therapist Fabulash</title>
+		<title>Detail Request Inventory | Therapist Fabulash</title>
 		<meta name="description" content="Updates and statistics">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -112,7 +112,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<h4 class="sidebar-logo">THERAPIST PAGE</h4>
 							</div>
 							<ul class="kt-menu__nav ">
-								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item " aria-haspopup="true"><a href="user_therapist/index.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 								    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								        <rect x="0" y="0" width="24" height="24"/>
 								        <path d="M2.56066017,10.6819805 L4.68198052,8.56066017 C5.26776695,7.97487373 6.21751442,7.97487373 6.80330086,8.56066017 L8.9246212,10.6819805 C9.51040764,11.267767 9.51040764,12.2175144 8.9246212,12.8033009 L6.80330086,14.9246212 C6.21751442,15.5104076 5.26776695,15.5104076 4.68198052,14.9246212 L2.56066017,12.8033009 C1.97487373,12.2175144 1.97487373,11.267767 2.56066017,10.6819805 Z M14.5606602,10.6819805 L16.6819805,8.56066017 C17.267767,7.97487373 18.2175144,7.97487373 18.8033009,8.56066017 L20.9246212,10.6819805 C21.5104076,11.267767 21.5104076,12.2175144 20.9246212,12.8033009 L18.8033009,14.9246212 C18.2175144,15.5104076 17.267767,15.5104076 16.6819805,14.9246212 L14.5606602,12.8033009 C13.9748737,12.2175144 13.9748737,11.267767 14.5606602,10.6819805 Z" fill="#000000" opacity="0.3"/>
@@ -140,7 +140,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								        <rect fill="#000000" x="11" y="16" width="2" height="2" rx="1"/>
 								    </g>
 								</svg></span><span class="kt-menu__link-text">Complaint</span></a></li>
-								<li class="kt-menu__item" aria-haspopup="true"><a href="user_therapist/inventory.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+								<li class="kt-menu__item  kt-menu__item--active" aria-haspopup="true"><a href="user_therapist/inventory.html" class="kt-menu__link "><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 									<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 										<rect id="bound" x="0" y="0" width="24" height="24" />
 										<path d="M4,9.67471899 L10.880262,13.6470401 C10.9543486,13.689814 11.0320333,13.7207107 11.1111111,13.740321 L11.1111111,21.4444444 L4.49070127,17.526473 C4.18655139,17.3464765 4,17.0193034 4,16.6658832 L4,9.67471899 Z M20,9.56911707 L20,16.6658832 C20,17.0193034 19.8134486,17.3464765 19.5092987,17.526473 L12.8888889,21.4444444 L12.8888889,13.6728275 C12.9050191,13.6647696 12.9210067,13.6561758 12.9368301,13.6470401 L20,9.56911707 Z" id="Combined-Shape" fill="#000000" />
@@ -271,10 +271,13 @@ License: You must have a valid license purchased only from themeforest(the above
 							<div class="kt-container  kt-container--fluid ">
 								<div class="kt-subheader__main">
 									<h3 class="kt-subheader__title">
-										Active Treatment </h3>
+										Inventory </h3>
 									<span class="kt-subheader__separator kt-hidden"></span>
 									<div class="kt-subheader__breadcrumbs">
-										<a href="user_therapist/index.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<a href="user_therapist/inventory.html" class="kt-subheader__breadcrumbs-home"><i class="flaticon2-shelter"></i></a>
+										<span class="kt-subheader__breadcrumbs-separator"></span>
+										<a href="user_therapist/inventory_detail_disetujui.html" class="kt-subheader__breadcrumbs-link">
+											Detail request </a>
 									</div>
 								</div>
 							</div>
@@ -283,9 +286,10 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- end:: Content Head -->
 
 						<!-- begin:: Content -->
+
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-                            <div class="row row-centered">
+                            <div class="row justify-content-center">
 
 								<div class="col-12">
 
@@ -297,27 +301,67 @@ License: You must have a valid license purchased only from themeforest(the above
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
-													Active Treatments
+													Detail Request
 												</h3>
 											</div>
 										</div>
 										<div class="kt-portlet__body">
-                                            <form class="kt-margin-b-10">
-    											<div class="row justify-space-between">
-													<div class="col-lg-4 col-sm-6 input-daterange input-group margin-mobile-b-5">
-														<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
-														<div class="input-group-append">
-															<span class="input-group-text">
-																<i class="la la-calendar"></i>
-															</span>
-														</div>
-													</div>
-													<div class="col-lg-4 col-sm-6">
-	    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
-													</div>
-    											</div>
-    										</form>
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_treatment_active"></table>
+                                            <div class="row" style="margin-bottom: 50px;">
+                                                <h5 class="col-12 color-main-dark" name="kode_request" style="margin-bottom: 20px;">#123456</h5>
+												<div class="col-6" style="padding-right:0px;">
+	                                                <span class="kt-font-bold">Date Request : <span name="date_request">15 November 2019</span></span>
+												</div>
+												<div class="col-6" style="padding-left:0px;text-align:right;">
+	                                                <span class="kt-font-bold">Date Approve : <span name="date_approve">15 November 2019</span></span>
+												</div>
+                                            </div>
+                                            <table class="table table-bordered table-hover well-align-table" role="grid">
+                                                <thead>
+                                                    <tr role="row">
+                                                        <th style="width: 5%">No</th>
+                                                        <th style="width: 15%">Alat/Bahan</th>
+                                                        <th style="width: 25%">Barang</th>
+                                                        <th style="width: 15%">Satuan</th>
+                                                        <th style="width: 12.5%">Request</th>
+                                                        <th style="width: 12.5%">Disetujui</th>
+                                                        <th style="width: 15%">Upload Foto</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody id="item_list">
+                                                    <tr role="row">
+                                                        <td>1</td>
+                                                        <td class="text-center">
+                                                            <select class="form-control" name="request_type" disabled>
+        														<option>Alat</option>
+        														<option>Bahan</option>
+        													</select>
+                                                        </td>
+														<td class="text-center">
+                                                            <select class="form-control" name="request_barang" disabled>
+        														<option>Eyelash Size 12</option>
+        														<option>Eyelash Size 12</option>
+        														<option>Eyelash Size 12</option>
+        													</select>
+                                                        </td>
+														<td class="text-center">
+                                                            <select class="form-control" name="request_satuan" disabled>
+        														<option>Box</option>
+        														<option>Box</option>
+        														<option>Box</option>
+        													</select>
+                                                        </td>
+                                                        <td class="text-center">
+                                                            <input type="number" class="form-control" name="request_jumlah_request" value="5" readonly>
+                                                        </td>
+                                                        <td class="text-center">
+                                                            <input type="number" class="form-control" name="request_jumlah_disetujui" value="5" readonly>
+                                                        </td>
+                                                        <td class="text-center">
+                                                            <label for="request_foto"  class="btn btn-link" style="padding:0px;"><i class="flaticon2-photo-camera"></i>Preview</label>
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
 										</div>
 									</div>
 
@@ -402,6 +446,62 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_therapist.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
+
+        <script>
+            //Tambah item
+            $('#item_add').click(function() {
+				document.querySelector('#item_list').insertAdjacentHTML (
+					'beforeend',
+					`<tr role="row">
+                        <td tabindex="0">1</td>
+                        <td class="text-center">
+                            <select class="form-control">
+                                <option>Alat</option>
+                                <option>Bahan</option>
+                            </select>
+                        </td>
+                        <td class="text-center">
+                            <select class="form-control">
+                                <option>Eyelash Size 12</option>
+                                <option>Eyelash Size 12</option>
+                                <option>Eyelash Size 12</option>
+                            </select>
+                        </td>
+                        <td class="text-center">
+                            <select class="form-control">
+                                <option>Box</option>
+                                <option>Box</option>
+                                <option>Box</option>
+                            </select>
+                        </td>
+                        <td class="text-center">
+                            <input type="number" class="form-control">
+                        </td>
+                        <td class="text-center">
+                            <input type="number" class="form-control">
+                        </td>
+                        <td class="text-center">
+                            <input type="file" style="display: none; width:0; height: 0" accept="image/*" id="request_foto">
+                            <label for="request_foto"  class="btn btn-link" style="padding:0px;"><i class="flaticon2-photo-camera"></i>Foto</label>
+                        </td>
+                    </tr>`
+				)
+			});
+
+            //Sweetalert
+            $('#kt_sweetalert_request_berhasil').click(function(e) {
+				swal.fire({
+					title: "Berhasil",
+					text: "Request berhasil dilakukan",
+					type: "success",
+					confirmButtonText: "Ok",
+					confirmButtonClass: "btn btn-brand"
+				}).then(function(result) {
+					// location.reload();
+				});
+			});
+
+        </script>
 
 		<!--end::Page Scripts -->
 	</body>
